--- a/France/style.css
+++ b/France/style.css
@@ -1,30 +1,32 @@
+:root {
+    --unit: 100px;
+    --left-stripe-color: #002654;
+    --mid-stripe-color: #FFFFFF;
+    --right-stripe-color: #ed2939;
+}
+
 .flag {
-    border: 2px solid black;
-    position: relative;
-    width: 900px;
-    height: 600px;
+    width: calc(var(--unit)*3);
+    height: calc(var(--unit)*2);
+
+    display: flex;
+
+    border: 1px solid black;
 }
 
-.blue {
-    width: 300px;
-    height: 600px;
-    background-color: #00008a;
-    position: absolute;
-    
+.flag > * {
+    width: var(--unit);
+    height: calc(var(--unit)*2);
 }
 
-.white {
-    width: 300px;
-    height: 600px;
-    background-color: #f5f5f5;
-    position: absolute;
-    left: 300px;
+.left-stripe {
+    background: var(--left-stripe-color);
 }
 
-.red {
-    width: 300px;
-    height: 600px;
-    background-color: #8a0000;
-    position: absolute;
-    left: 600px;
+.mid-stripe {
+    background: var(--mid-stripe-color);
+}
+
+.right-stripe {
+    background: var(--right-stripe-color);
 }
