--- a/Germany/style.css
+++ b/Germany/style.css
@@ -1,43 +1,33 @@
 :root {
-    --flag-width: 900px;
-    --flag-height: 600px;
+  --unit: 100px;
+  --top-stripe-color: #000000;
+  --mid-stripe-color: #dd0000;
+  --btm-stripe-color: #ffcc00;
 }
 
 .flag {
-    border: 2px solid black;
-    position: relative;
-    width: var(--flag-width);
-    height: var(--flag-height);
+  width: calc(var(--unit) * 5);
+  height: calc(var(--unit) * 3);
+
+  display: flex;
+  flex-direction: column;
+
+  border: 1px solid black;
 }
 
-.black {
-    height: calc(var(--flag-height)/3);
-    width: var(--flag-width);
-    background-color: hsl(0, 0%, 0%);
-    position: absolute;
+.flag > * {
+  height: var(--unit);
+  width: calc(var(--unit) * 5);
 }
 
-.red {
-    height: calc(var(--flag-height)/3);
-    width: var(--flag-width);
-    background-color: hsl(0, 100%, 63%);
-    position: absolute;
-    top: calc(var(--flag-height)/3);
+.top-stripe {
+  background: var(--top-stripe-color);
 }
 
-.yellow {
-    height: calc(var(--flag-height)/3);
-    width: var(--flag-width);
-    background-color: hsl(55, 100%, 63%);
-    position: absolute;
-    top: calc(var(--flag-height)/3*2);
+.mid-stripe {
+  background: var(--mid-stripe-color);
 }
 
-p {
-    font-size: 3rem;
-    text-align: center;
-}
-
-.black, .red > p {
-    color: whitesmoke;
+.btm-stripe {
+  background: var(--btm-stripe-color);
 }
