--- a/USA/style.css
+++ b/USA/style.css
@@ -1,6 +1,8 @@
 :root {
   --unit: 100px;
-  --star-color: hsl(0, 0%, 96%);
+  --white-color: #FFFFFF;
+  --blue-color: #0A3161;
+  --red-color: #b31942;
 }
 
 .flag {
@@ -11,12 +13,12 @@
 }
 
 .red-stripe {
-  background: hsl(0, 82%, 42%);
+  background: var(--red-color);
   /* outline: 3px dotted hsl(0, 0%, 100%); */
 }
 /* Out line for sewed like efffect or smh id */
 .white-stripe {
-    background: hsl(0, 0%, 100%);
+    background: var(--white-color);
     /* outline: 3px dotted hsl(0, 0%, 96%); */
 }
 
@@ -56,12 +58,12 @@
   width: 0px;
   height: 0px;
   border-right: 1em solid transparent;
-  border-bottom: 0.7em solid var(--star-color);
+  border-bottom: 0.7em solid var(--white-color);
   border-left: 1em solid transparent;
   transform: rotate(35deg);
 }
 .star:before {
-  border-bottom: 0.8em solid var(--star-color);
+  border-bottom: 0.8em solid var(--white-color);
   border-left: 0.3em solid transparent;
   border-right: 0.3em solid transparent;
   position: absolute;
@@ -81,7 +83,7 @@
   width: 0;
   height: 0;
   border-right: 1em solid transparent;
-  border-bottom: 0.7em solid var(--star-color);
+  border-bottom: 0.7em solid var(--white-color);
   border-left: 1em solid transparent;
   transform: rotate(-70deg);
   content: "";
